Summery working on the app

--- a/onnxruntime_test/pubspec.yaml
+++ b/onnxruntime_test/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   onnxruntime: ^1.4.1
+  langchain_tiktoken:
+    path: ../../langchain_tiktoken
 
 dev_dependencies:
   flutter_test:
